--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="card">
         <!--<img src="asset/ADD yourimage.png"> -->
-        <div class="card-photo"><img src="asset/github.png" alt="profile image"></div>
+        <div class="card-photo"><img src="asset/IMG_20210930_145450_829.jpg" alt="profile image"></div>
         <div class="card-text">
             <div class="card-title">
                 <!--<h1>Add your name here</h1> -->
-                <h1>Your Name</h1>
+                <h1>Sengoku Adhirama</h1>
             </div>
             <div class="card-description">
                 <!--<p>Add your name at "your name"</p> -->
