fix: empty field

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="card-description">
                 <!--<p>Add your name at "your name"</p> -->
-                <p> This card is to certify that "your name" have paticipated in <b>"GitHub for beginners"</b>
+                <p> This card is to certify that sengoku have paticipated in <b>"GitHub for beginners"</b>
                     organised by ClubToCode MITM on Aug,2023</p>
             </div>
             <div class="card-footer">
